Fix: Remove rotation from pizza
The pizza was too flat, adding unneeded whitespace. In this commit, the image's transparent outer bounds are cropped and the pizza loses its Y-axis rotation.

--- a/FinalProject/pizzastyle.css
+++ b/FinalProject/pizzastyle.css
@@ -356,10 +356,10 @@ span {
 }
 @keyframes pizza_spin {
   from {
-    transform: rotateX(75deg) rotateZ(0deg);
+    transform: rotateZ(0deg);
   }
   to {
-    transform: rotateX(75deg) rotateZ(360deg);
+    transform: rotateZ(360deg);
   }
 }
 
